make it simpler 1

--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@
             <p class="card-text" style="font-size: 0.8rem;">
               <a href="https://ccse.kennesaw.edu/cs/index.php">Department of Computer Science</a>,<br />
               <a href="https://www.kennesaw.edu/">Kennesaw State University</a>,<br />
-              J341, Atrium Building,<br/>
-              1100 South Marietta Pkwy SE,<br/>
-              Marietta, GA 30062<br/><br/>
+              Atrium Building #J-341,<br/>
               <i class="far fa-envelope" title="email"></i> jnoh3@kennesaw.edu<br />
-              <i class="fas fa-link" title="ORCID"></i> <a href="https://orcid.org/0000-0001-5734-9068">orcid.org/0000-0001-5734-9068</a><br/>
-              <i class="far fa-calendar-check" title="Office hours"></i> Wednesday 2:00 PM - 4:30 PM or Available upon
-              request. <br/>
-              <a href="https://twitter.com/JihoNoh"><i class="fab fa-twitter"></i> </a>
+              <i class="far fa-phone" title="phone"></i>470-578-6355<br />
             </p>
           </div>
         </div>
