make it simpler 1

--- a/index.html
+++ b/index.html
@@ -58,20 +58,26 @@
           </div>
         </div>
       </div>
-      <div class="col-md-7 order-md-first align-middle pt-3">
-        <p>
-          Jiho Noh is an assistant professor of computer science at Kennesaw State University. His primary
-          research interests are on the fields of natural language processing with applications to intelligent search.
-        </p>
+      <div id="content" class="col-md-7 order-md-first align-middle pt-3">
+        <section>
+          <h2>Affliation</h2>
+          <ul>
+            <li>Assistant Professor, Department of Computer Science, Kennesaw State University</li>
+          </ul>
+        </section>
 
-        Topic keywords include:
-        <ul>
-          <li>Neural representation learning for knowledge discovery</li>
-          <li>Conversation techniques in information retrieval</li>
-          <li>Text processing including data mining, information extraction, entity recognition and knowledge
-            database construction</li>
-          <li>Natural language generation</li>
-        </ul>
+        <section>
+          <h2>Research Interests</h2>
+          Jiho has specialties in Search and Recommender Systems, Machine Learning, and Artificial Intelligence with a focus on Natural Language Processing. His research interests include the following topics:
+          <ul>
+            <li>Generative AI for Knowledge Representation</li>
+            <li>Neural representation learning for knowledge discovery</li>
+            <li>Text processing including data mining, information extraction, entity recognition and knowledge
+              database construction</li>
+            <li>Conversation techniques in information retrieval</li>
+          </ul>
+        </section>
+
         <p> If you are interested in discussing research topics, please contact me via <a href="mailto:jnoh3@kennesaw.edu">email</a>.</p>
       </div>
     </div>
