--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link href="css/main.css" rel="stylesheet" type="text/css">
+  <!-- Add a favicon -->
+  <link rel="icon" type="image/png" href="a/img/favicon_io/favicon-32x32.png">
 </head>
 
 <body>
