--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 
         <div class="section-title">
           <h2>About</h2>
-          Jiho's <b>research interests</b> include the following topics: &clubs; Generative AI for Knowledge
-          Representation, &clubs; Neural representation learning for knowledge discovery, &clubs; Text processing
-          including data mining, information extraction, entity recognition and knowledge database construction, and 
-          &clubs; Conversation techniques in information retrieval. If you are interested in discussing research
-          topics with him, please contact me via <a href="mailto:jnoh3@kennesaw.edu">email</a>.
+          Dr. Jiho Noh's <b>research interests</b> include the following topics: &clubs; Generative
+          AI for Knowledge Representation, &clubs; Neural representation learning for knowledge
+          discovery, &clubs; Text processing including data mining, information extraction, entity
+          recognition and knowledge database construction, and &clubs; Conversation techniques in
+          information retrieval. If you are interested in discussing research topics with him,
+          please contact me via <a href="mailto:jnoh3@kennesaw.edu">email</a>.
         </div>
 
         <div class="row">
