--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <h3>Updates!</h3>
             <div class="row">
               <div class="col-lg">
-                <p><strong>Sep 26, 2023</strong> &ndash; I am attending "Task Focused IR in the Era of Generative AI"
-                at Microsoft Research, Redmond, WA, USA.</p>
+                <p><strong>Jan 1, 2025</strong> &ndash; Congratulations~! Nong's paper "YouLeQD: Decoding the Cognitive Complexity of Questions and Engagement in Online Educational Videos from Learner's Perspectives" accepted in IEEE Conference on Semantic Computing.</p>
+                <p><strong>Jan 1, 2025</strong> &ndash; Congratulations~! Sachin's paper, advised by Alexiou Michail, "Investigating the Transferability and Robustness of Adversarial Attacks between Standard and Dilated CNN Architectures" is accepted in AINA-2025</p>
               </div>
             </div>
           </div>
