--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          Dr. Jiho Noh's <b>research interests</b> include the following topics: &clubs; Generative
-          AI for Knowledge Representation, &clubs; Neural representation learning for knowledge
-          discovery, &clubs; Text processing including data mining, information extraction, entity
-          recognition and knowledge database construction, and &clubs; Conversation techniques in
-          information retrieval. If you are interested in discussing research topics with him,
-          please contact me via <a href="mailto:jnoh3@kennesaw.edu">email</a>.
+          Dr. Jiho Noh's <b>research interests</b> include the following topics: &clubs; Generative AI for Knowledge Representation, &clubs; Neural representation learning for knowledge discovery, &clubs; Text processing including data mining, information extraction, entity recognition and knowledge database construction, and &clubs; Conversation techniques in information retrieval. If you are interested in discussing research topics with him, please contact me via <a href="mailto:jnoh3@kennesaw.edu">email</a>.
         </div>
 
         <div class="row">
@@ -103,8 +98,8 @@
             <h3>Updates!</h3>
             <div class="row">
               <div class="col-lg">
-                <p><strong>Jan 1, 2025</strong> &ndash; Congratulations~! Nong's paper "YouLeQD: Decoding the Cognitive Complexity of Questions and Engagement in Online Educational Videos from Learner's Perspectives" accepted in IEEE Conference on Semantic Computing.</p>
-                <p><strong>Jan 1, 2025</strong> &ndash; Congratulations~! Sachin's paper, advised by Alexiou Michail, "Investigating the Transferability and Robustness of Adversarial Attacks between Standard and Dilated CNN Architectures" is accepted in AINA-2025</p>
+                <p><strong>Jan, 2025</strong> &ndash; Congratulations~! Nong's paper "YouLeQD: Decoding the Cognitive Complexity of Questions and Engagement in Online Educational Videos from Learner's Perspectives" accepted in IEEE Conference on Semantic Computing.</p>
+                <p><strong>Jan, 2025</strong> &ndash; Congratulations~! Sachin's paper, advised by Alexiou Michail, "Investigating the Transferability and Robustness of Adversarial Attacks between Standard and Dilated CNN Architectures" is accepted in AINA-2025</p>
               </div>
             </div>
           </div>
@@ -119,7 +114,24 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Jiho and his reserach team focus on the applied science of information retrieval and natural language processing across a variety of domains, including healthcare, education, and project management businesses.</p>
+
+            </p>
+        </div>
+        <h3 class="project-title">2024</h3>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="project-item">
+              <h4>Educational Question Generation and Evaluation</h4>
+              <p><em>Developing a question generation system for educational videos and evaluating the cognitive complexity of questions and engagement in online educational videos.</em></p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="project-item">
+              <h4>Automatic Educational Concept Map Construction</h4> 
+              <p><em>Developing a domain-independent concept map construction system from digital texts for knowledge tracing and assessment question generation.</em></p>
+            </div>
+          </div>
         </div>
 
         <h3 class="project-title">2022</h3>
@@ -141,46 +153,46 @@
           </div>
         </div>
 
-        <h3 class="project-title">2020</h3>
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="project-item">
-              <h4>Joint Model for Entity Recognition and Normalization</h4>
-              <p><em>Design a joint model utilizing neural network architecture for mention detection and entity linking within a biomedical ontology (i.e., UMLS concepts).</em></p>
-            </div>
-            <div class="project-item">
-              <h4>Misleading Information on Twitter Regarding Nicotine as Potential Prophylactic or Therapeutic for COVID-19</h4>
-              <p><em>Predictive model using CBA algorithm (apriori association rules) for identifying tweets with misleading information, especially on the use of smoking (vaping) for COVID-19. </em></p>
-            </div>
-            <div class="project-item">
-              <h4>Identifying Special Interest Groups on Twitter and the Effects of Twitter's interventions</h4>
-              <p><em>Data analytics on the perspectives of a special interest group (i.e., QAnon) towards the COVID related events.</em></p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="project-item">
-              <h4>Document Retrieval using Neural Text Summarization</h4>
-              <p><em>Scholarly document retrieval for precision medicine using deep learning methods for document classification and text summarization.
+<!--         <h3 class="project-title">2020</h3> -->
+<!--         <div class="row"> -->
+<!--           <div class="col-lg-6"> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>Joint Model for Entity Recognition and Normalization</h4> -->
+<!--               <p><em>Design a joint model utilizing neural network architecture for mention detection and entity linking within a biomedical ontology (i.e., UMLS concepts).</em></p> -->
+<!--             </div> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>Misleading Information on Twitter Regarding Nicotine as Potential Prophylactic or Therapeutic for COVID-19</h4> -->
+<!--               <p><em>Predictive model using CBA algorithm (apriori association rules) for identifying tweets with misleading information, especially on the use of smoking (vaping) for COVID-19. </em></p> -->
+<!--             </div> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>Identifying Special Interest Groups on Twitter and the Effects of Twitter's interventions</h4> -->
+<!--               <p><em>Data analytics on the perspectives of a special interest group (i.e., QAnon) towards the COVID related events.</em></p> -->
+<!--             </div> -->
+<!--           </div> -->
+<!--           <div class="col-lg-6"> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>Document Retrieval using Neural Text Summarization</h4> -->
+<!--               <p><em>Scholarly document retrieval for precision medicine using deep learning methods for document classification and text summarization. -->
 
-</em></p>
-            </div>
-            <div class="project-item">
-              <h4>BMET (BioMedical Entity Tagged) Embeddings</h4>
-              <p><em>Learning joint word-concept embeddings from the biomedical entity annotated corpus. We use the MeSH (Medical Subject Headings) codes for representing biomedical entities.</em></p>
-            </div>
-          </div>
-        </div>
+<!-- </em></p> -->
+<!--             </div> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>BMET (BioMedical Entity Tagged) Embeddings</h4> -->
+<!--               <p><em>Learning joint word-concept embeddings from the biomedical entity annotated corpus. We use the MeSH (Medical Subject Headings) codes for representing biomedical entities.</em></p> -->
+<!--             </div> -->
+<!--           </div> -->
+<!--         </div> -->
 
-        <h3 class="project-title">2017</h3>
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="project-item">
-              <h4>Kratylos: Unified linguistic corpora from diverse data sources</h4>
-              <p><em>developed a document management system that serves the (computational) linguistic researchers for managing and accessing the lexical and corpus datasets </em></p>
-              <p style="font-size: 0.8em;">(Fundedby Endangered Language Alliance (ELA) and University of Kentucky)</p>
-            </div>
-          </div>
-        </div>
+<!--         <h3 class="project-title">2017</h3> -->
+<!--         <div class="row"> -->
+<!--           <div class="col-lg-6"> -->
+<!--             <div class="project-item"> -->
+<!--               <h4>Kratylos: Unified linguistic corpora from diverse data sources</h4> -->
+<!--               <p><em>developed a document management system that serves the (computational) linguistic researchers for managing and accessing the lexical and corpus datasets </em></p> -->
+<!--               <p style="font-size: 0.8em;">(Fundedby Endangered Language Alliance (ELA) and University of Kentucky)</p> -->
+<!--             </div> -->
+<!--           </div> -->
+<!--         </div> -->
       </div>
     </section><!-- End Projects Section -->
 
