--- a/index.html
+++ b/index.html
@@ -110,14 +110,23 @@
 
     <!-- ======= Projects Section ======= -->
     <section id="projects" class="projects">
-      <div class="container" data-aos="fade-up">
 
+      <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Projects</h2>
           <p>Jiho and his reserach team focus on the applied science of information retrieval and natural language processing across a variety of domains, including healthcare, education, and project management businesses.</p>
-
-            </p>
         </div>
+
+        <h3 class="project-title">2025</h3>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="project-item">
+              <h4>Exploring the Opioid Epidemic in Rural Areas: A Comprehensive Analysis of Opioid Use and Comorbidities in MedSter EHR Ddata</h4>
+              <p><em>This project use various medical datasets to examine the prevalence and patterns of opioid use and associated comorbidities. The findings aim to inform interventions and policies to address the opioid epidemic and disparities in health and health care.</em></p>
+            </div>
+          </div>
+        </div>
+
         <h3 class="project-title">2024</h3>
         <div class="row">
           <div class="col-lg-6">
