--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
           <div class="col-lg-6">
             <div class="project-item">
               <h4>Educational Question Generation and Evaluation</h4>
-              <p><em>Developing a question generation system for educational videos and evaluating the cognitive complexity of questions and engagement in online educational videos.</em></p>
+                <p><em>Developing a question generation system for educational videos and evaluating the cognitive complexity of questions and engagement in online educational videos.</em><br/>
+                  <a href="https://github.com/Jiho-YesNLP/QYTL"><i class='bx bxl-github'></i></a>
+                </p>
             </div>
           </div>
           <div class="col-lg-6">
