--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         data-typed-items="Machine Learning, Natural Language Processing, Artificial Intelligence, Search and Recommender Systems"></span>
       </p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://x.com/JihoNoh" class="twitter"><i class="bx bxl-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
