--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
       </p>
       <div class="social-links">
         <a href="https://x.com/JihoNoh" class="twitter"><i class="bx bxl-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/yesjiho/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="mailto:jnoh3@kennesaw.edu" class="email"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
