--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         data-typed-items="Machine Learning, Natural Language Processing, Artificial Intelligence, Search and Recommender Systems"></span>
       </p>
       <div class="social-links">
-        <a href="https://x.com/JihoNoh" class="twitter"><i class="bx bxl-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/in/yesjiho/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://x.com/JihoNoh" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.linkedin.com/in/yesjiho/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="mailto:jnoh3@kennesaw.edu" class="email"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
@@ -386,3 +386,4 @@
 </body>
 
 </html>
+
