--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>
       My specializations are in 
       <span class="typed"
-        data-typed-items="Machine Learning, Natural Language Processing, Artificial Intelligence, Search and Recommender Systems"></span>
+        data-typed-items="Natural Language Processing, AI in Education/Healthcare, Information Systems, Knowledge Representations and Reasoning"></span>
       </p>
       <div class="social-links">
         <a href="https://x.com/JihoNoh" class="twitter"><i class="bi bi-twitter-x"></i></a>
